$Header: /cvsroot/CGI::Framework/Changes,v 1.32 2004/11/23 00:28:02 mina Exp $

Revision history for Perl module CGI::Framework

0.18
	- pre__pre__all(), pre__post__all(), post__pre__all() and
	  post__post__all() are now all passed a second argument:  The name
	  of the template about to be/just sent.

0.17
	- The "process" javascript function now returns false, so its return
	  value can be utilized in "onclick" events of anchors to avoid the
	  "screen-scroll-to-top" abnormality.

0.16
	- Implemented new constructor parameters: sessions_serializer_default,
	  sessions_serializer_freezethaw and sessions_serializer_storable
	- Bugfix - running under mod_perl resulted in occasional "Software
	  caused connection abort" messages.  These are no longer considered
	  fatal.
	
0.15
	- No longer tries to write and unlink a testing file to sessions_dir
	  for every invocation
	- Fatal error messages now have a stack backtrace appended to them
	- Bugfix: Fatal errors are no longer sent to browser below the fatal
	  error template content when running under mod_perl

0.14
	- Errors emailed via fatal_error_email now include header
	  X-CGI-Framework-REMOTE-ADDR
	- Implemented new constructor parameters: action and cookie_domain
	- Bugfix: A weird error produced if a submitted form has the element
	  _lang more than once is now avoided
	- Some minor changes to make the framework work under mod_perl: Also
	  introduced new method finalize()

0.13
	- Implemented new constructor parameter: expire
	- log_this now also logs the IP address from REMOTE_ADDR
	- Internal HTML::Template object is now initialized with option
	  loop_context_vars, allowing for loop vars such as __odd__
	  and __inner__

0.12
	- Implemented support for 4 new callbacks:
	    pre__pre__all()
	    post__pre__all()
	    pre__post__all()
	    post__post__all()

0.11
	- Implemented new method: return_template()
	- Implemented 2 new special variables: _missing_info and
	  _missing_info_caller